--- a/exercicios/ex019/style.css
+++ b/exercicios/ex019/style.css
@@ -1,26 +1,42 @@
 @charset "UTF-8";
 
 /* Anotações e/ou Comentários:
-    em HTML é id = em CSS é (#)
-    em HTNL é class = em CSS é (.)
+    em HTML é id = em CSS é (#) (só pode um elemento) 
+    em HTNL é class = em CSS é (.) (pode vários elementos)
 
 */
 
 body {
-    background-color: rgb(205, 255, 203);
+    background-color: #d6fde9;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    color: rgb(4, 100, 0);
+    color: #1e402f;
 }
 
 h1#principal {
     text-align: center;
-    background-color: rgb(4, 100, 0);
+    background-color: #3c805e;
     color: white;
 }
 
 h2 {
-    color: rgb(51, 77, 49);
+    color: #3c805e;
+}
+
+.basico {
+    color: #3c805e;
+}
+
+.intermediario {
+    color: #80793c;
+}
+
+.avancado {
+    color: #803c3c;
+}
+
+.destaque {
+    background-color: #c5c56070;
 }
